# testrepo

./: .coveragerc  .gitattributes  .gitignore  README.md  pyproject.toml  rebuild_coverage.bat  run_coverage.bat  run_coverage.sh  setup.py  test.patch
.github/workflows/: coverage.yml  deploy-page.yml  test-coverage-container.yml  test-coverage-linux-windows-patch.yml  test-windows-build-wheel.yml  test-windows-wheel-list.yml
docs/: index.html
docs/main/: index.html
docs/report/: index.html
docs/report/2026-02-11/: index.html
docs/report/2026-02-11-091108/: index.html
docs/report/2026-02-11-091157/: index.html
docs/report/2026-02-13-044142/: index.html
docs/report/latest/: index.html
docs/test/: index.html
mypackage/: __init__.py  calculator.py  cython_math.pyx  data_processor.py  string_utils.py  validators.py
tests/: __init__.py  test_calculator.py  test_cython_math.py  test_data_processor.py  test_string_utils.py  test_validators.py
