[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "A simple test package with Cython for Codecov testing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
]

[tool.setuptools.packages.find]
include = ["mypackage*"]

